[gd_scene load_steps=3 format=3 uid="uid://dwi6g1ue7ggx4"]

[ext_resource type="Script" path="res://Scripts/UI/Pause Menu/settings.gd" id="1_3qfox"]
[ext_resource type="FontFile" uid="uid://bu31gsw3wcg8t" path="res://Assets/fonts/SpaceMono-Regular.ttf" id="2_qwe3e"]

[node name="Settings" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3qfox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="SettingsLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.5
offset_right = 73.5
offset_bottom = 45.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -124.5
offset_right = 110.0
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="WindowSizeLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "Window Size:"

[node name="WindowSizeOptionButton" type="OptionButton" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "Fullscreen:"

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="UIVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "UI Volume:"

[node name="UIVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="KeyBindingContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="KeyBindingButton" type="Button" parent="VBoxContainer/KeyBindingContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "KeyBindings"

[node name="BackContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/BackContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_qwe3e")
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="item_selected" from="VBoxContainer/OptionsContainer/WindowSizeOptionButton" to="." method="_on_window_size_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer/OptionsContainer/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="value_changed" from="VBoxContainer/OptionsContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/OptionsContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/OptionsContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/OptionsContainer/UIVolumeSlider" to="." method="_on_ui_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/KeyBindingContainer/KeyBindingButton" to="." method="_on_key_binding_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackContainer/BackButton" to="." method="_on_back_button_pressed"]
